# pandorynative

./: .gitignore  CMakeLists.txt  README.md
jni/: Android.mk
jni/jailbreak/src/: PandoryJailbreak.cpp  PandoryJailbreak.h  main.cpp
jni/jailbreak/src/Jailbreak/: JailbreakAbstract.cpp  JailbreakAbstract.h  MoorechipJailbreak.cpp  MoorechipJailbreak.h  TrimuiJailbreak.cpp  TrimuiJailbreak.h
jni/libpandory/: Android.cpp  Android.h  AndroidFilesystem.cpp  AndroidFilesystem.h  AndroidProperties.cpp  AndroidProperties.h  AppDetect.cpp  AppDetect.h  DD.cpp  DD.h  Environment.cpp  Environment.h  Fs.cpp  Fs.h  FsMounter.cpp  FsMounter.h  Jailbreak.cpp  Jailbreak.h  MooreChip.cpp  MooreChip.h  Notifier.cpp  Notifier.h  PandoraController.cpp  PandoraController.h  Process.cpp  Process.h  ResolutionSwitcher.cpp  ResolutionSwitcher.h  ScreenSettings.cpp  ScreenSettings.h  ShellEnabler.cpp  ShellEnabler.h  TimeTools.cpp  TimeTools.h  VideoDebricker.cpp  VideoDebricker.h  VirtualKeyboard.cpp  VirtualKeyboard.h
jni/pandorykey/src/: PandoryKey.cpp  PandoryKey.h  main.cpp
